[workspace]
resolver="2" 

members = [
    "stm32f407_controller", 
    "rust-mqtt",
    "syslog-emb",
    "sntpc"
]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true 
incremental = false
opt-level = 1         
overflow-checks = true  

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true 
incremental = false
lto = 'fat'
opt-level = 3           
overflow-checks = true  

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false 
incremental = false
lto = 'fat'
opt-level = 3            
overflow-checks = false  

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false 
incremental = false
lto = 'fat'
opt-level = 3            
overflow-checks = false  

[workspace.dependencies]
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git",rev = "0be9b059", features = [ "defmt", "stm32f407ve", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git",rev = "0be9b059", features = ["defmt"] }
embassy-executor = { version = "0.4.0",git = "https://github.com/embassy-rs/embassy.git", rev = "0be9b059", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "nightly"] }
embassy-time = { version = "0.2",git = "https://github.com/embassy-rs/embassy.git", rev = "0be9b059", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "0be9b059",features = ["defmt" ] }
embassy-net = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git",rev = "0be9b059", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
embassy-futures = { version = "^0" ,git = "https://github.com/embassy-rs/embassy.git",rev = "0be9b059"}

ze40_bms = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}
ze50_bms = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}
tesla_m3_bms = {git = "ssh://git@github.com/rand12345/toucan_controller.git", features = ["debug"]}
foxess_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git", features = ["defmt"]}
solax_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git",  features = ["defmt"]}
pylontech_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git" }
byd_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git", features = ["v65"]}
bms_standard = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}

[patch.crates-io]
ze40_bms = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}
ze50_bms = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}
tesla_m3_bms = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}
foxess_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}
solax_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}
pylontech_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}
byd_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}
bms_standard = {git = "ssh://git@github.com/rand12345/toucan_controller.git"}

# defmt-rtt v0.4 not working with probe-run above 064ba39690cf5beb74b95e9acb24ccc6c105a57e
defmt = { git = "https://github.com/knurling-rs/defmt", rev = "064ba39690cf5beb74b95e9acb24ccc6c105a57e" } 
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "064ba39690cf5beb74b95e9acb24ccc6c105a57e" }
defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "064ba39690cf5beb74b95e9acb24ccc6c105a57e" }
panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "064ba39690cf5beb74b95e9acb24ccc6c105a57e" }
miniserde = {git = "https://github.com/dtolnay/miniserde.git"}