[package]
name = "ha-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = {version = "1", default-features = false, features = ["alloc"]}
embedded-alloc = "0.5.0"  # needed for miniserde


