[package]
authors = ["Nobody_Nowhere <63668759+rand12345@users.noreply.github.com>"]
name = "stm32f407_controller"
edition = "2021"
version = "0.1.1"

[[bin]]
name = "main"

[lib]
harness = false

[[test]]
name = "integration"
harness = false

[features]
default = ["defmt", "ze40", "foxess", "tcp_debug", "ntp"] 
 
ntp = ["dep:sntpc", "no-std-net", "dep:chrono"]
tcp_debug = []
precharge = []
v65 = []
defmt = []      
byd = ["dep:byd_protocol"]
tesla_m3 = ["dep:tesla_m3_bms"]
pylontech = ["dep:pylontech_protocol"]
ze50 = ["dep:ze50_bms"]
ze40 = ["dep:ze40_bms"]
foxess = ["dep:foxess_protocol"]
solax = ["dep:solax_protocol"]

[dependencies]

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = { version = "0.3" }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-io-async = { version = "0.6.0" }

embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
embassy-net.workspace = true
embassy-futures.workspace = true

futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
static_cell = "2"


embedded-alloc = "0.5.0"
heapless = { version = "0.8", default-features = false }
lazy_static = { version = "1", default-features = false, features = [
    "spin_no_std",
] }

embedded-hal = "0.2.7"
rand_core = {version = "0.6.4", default-features = false}
rust-mqtt = {path = "../rust-mqtt", default-features = false, features = ["no_std"]}
embedded-nal-async = { version = "0.7.1" }
miniserde = {version = "^0", default-features = false}
httparse = {version = "1", default-features = false}  # to be removed

crc16 = "0"
dotenvy_macro = "0.15.7"

sntpc = {path = "../sntpc", optional = true, default-features = false}
no-std-net = {version = "0.6.0", optional = true}
chrono = { version = "^0.4", optional = true, default-features = false}
chrono-tz = { version = "0.8.5", default-features = false}


[dependencies.ze40_bms]
workspace = true
optional = true

[dependencies.ze50_bms]
workspace = true
optional = true

[dependencies.tesla_m3_bms]
workspace = true
optional = true

[dependencies.foxess_protocol]
workspace = true
optional = true

[dependencies.solax_protocol]
workspace = true
optional = true

[dependencies.byd_protocol]
workspace = true
optional = true

[dependencies.pylontech_protocol]
workspace = true
optional = true

[dependencies.bms_standard]
workspace = true

[dev-dependencies]
defmt-test = "0.3.0"
bxcan = "0.7.0"
solax_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git", features = ["defmt"]}

