[package]
authors = ["Nobody_Nowhere <63668759+rand12345@users.noreply.github.com>"]
name = "stm32f407_controller"
edition = "2021"
version = "0.1.3"

[[bin]]
name = "main"

[lib]
harness = false

[[test]]
name = "integration"
harness = false

[features]
default = ["defmt"] #, "ntp"] #, "mqtt", "tcp_debug"  "modbus_bridge",] 
 
syslog = ["ntp"]
mqtt = []
ntp = ["dep:sntpc", "dep:chrono", "chrono-tz"]
http = ["dep:httparse"]
modbus_bridge = ["dep:crc16"]
tcp_debug = []
precharge = []
v65 = []
defmt = []      
byd = ["dep:byd_protocol"]
tesla_m3 = ["dep:tesla_m3_bms"]
pylontech = ["dep:pylontech_protocol"]
ze50 = ["dep:ze50_bms"]
ze40 = ["dep:ze40_bms"]
foxess = ["dep:foxess_protocol"]
solax = ["dep:solax_protocol"]

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = { workspace = true  }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
embassy-net.workspace = true
embassy-futures.workspace = true

futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
static_cell = "2"


embedded-io-async = { version = "0.6.0" }
embedded-alloc = "0.5.0"  # needed for miniserde

heapless = { workspace  = true }
lazy_static = { version = "1", default-features = false, features = [
    "spin_no_std",
] }

embedded-hal.workspace = true
embedded-nal-async = { version = "0.7.1" }

# mqtt
rust-mqtt = {path = "../rust-mqtt", default-features = false, features = ["no_std"]}
miniserde = {version = "^0", default-features = false}

#http
httparse = { version = "1", default-features = false, optional = true } 
# rand_core = {version = "0.6.4", default-features = false}

# modbus bridge
crc16 = { version = "0.4.0", optional = true }

dotenvy_macro = "0.15.7"

no-std-net = {workspace = true}

# NTP
sntpc = {path = "../sntpc", optional = true, default-features = false}
chrono = { version = "0.4", optional = true, default-features = false}
chrono-tz = { version = "0.8.5", optional = true, default-features = false}


[dependencies.ze40_bms]
workspace = true
optional = true

[dependencies.ze50_bms]
workspace = true
optional = true

[dependencies.tesla_m3_bms]
workspace = true
optional = true

[dependencies.foxess_protocol]
workspace = true
optional = true

[dependencies.solax_protocol]
workspace = true
optional = true

[dependencies.byd_protocol]
workspace = true
optional = true

[dependencies.pylontech_protocol]
workspace = true
optional = true

[dependencies.bms_standard]
workspace = true

[dependencies.syslog-emb]
path = "../syslog-emb/" 

[dev-dependencies]
defmt-test = "0.3.0"
bxcan = "0.7.0"
solax_protocol = {git = "ssh://git@github.com/rand12345/toucan_controller.git", features = ["defmt"]}

