[package]
name = "syslog-emb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
embassy-stm32.workspace = true
embassy-net.workspace = true
embassy-time.workspace = true
defmt.workspace = true
heapless.workspace = true


